--- a/.env
+++ b/.env
@@ -18,13 +18,13 @@ VCF_URL=https://files.catbox.moe/2c1iv9.js
 TO_URL=https://files.catbox.moe/2oyvj6.js
 HACK_URL=https://files.catbox.moe/tybzer.js
 GITHUB_GIT=https://apis.ibrahimadams.us.kg
-OWNER_NAME="Ibrahim Adams"
+OWNER_NAME="kelvin-g"
 YOUTUBE=scs/youtube.js
 MORE=scs/abdgoofed.js
 VARS=scs/aaaaahvars.js
-BOT_OWNER=ibraah-tech
+BOT_OWNER=kevoo
 BODY_JS_PATH=body.js
-REPO_OWNER=devibrah
+REPO_OWNER=kevoo
 PAIR=scs/aaapair.js
 ALIVE=scs/alive.js
 GROUP=scs/group.js
