--- a/config.env
+++ b/config.env
@@ -2,12 +2,12 @@ PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
-AUTO_REACT='no'
+AUTO_REACT='yes'
 ANTICALL=no
 AUTO_REACT_STATUS='yes'
 AUTO_REPLY='no'
 AUTO_READ='no'
-AUTO_SAVE_CONTACTS='no'
+AUTO_SAVE_CONTACTS='yes'
 AUTO_BIO='yes'
 OWNER_NAME= "᚛Ibrahim adams᚜"
 PORT=3000
