--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
-AUTO_DOWNLOAD_STATUS="no"
+AUTO_DOWNLOAD_STATUS="yes"
 AUTO_REACT='yes'
 ANTICALL=no
 AUTO_REACT_STATUS='yes'
